# ghccheck

./: GhcCheck.hs  README.md  ghccheck.cabal
