name:          ghccheck
version:       0.3
synopsis:      A wrapper around GHC to make it easier to use in an IDE compile loop
-- description:
license:       BSD3
license-file:  LICENSE
author:        Emil Axelsson
maintainer:    emax@chalmers.se
copyright:     Copyright (c) 2015, Emil Axelsson
category:      Executable
build-type:    Simple
cabal-version: >=1.10
Tested-with:   GHC==7.8.3

extra-source-files:
  bash/ghcci

executable ghccheck
  main-is:          GhcCheck.hs
  default-language: Haskell2010

  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  build-depends:
    base      < 4.9,
    cmdargs   < 0.11,
    directory < 1.3,
    filepath  < 1.5,
    process   < 1.3,
    text      < 1.3

