name:          ghccheck
version:       0.3
synopsis:      A wrapper around GHC to make it easier to use in an IDE compile loop
-- description:
license:       BSD3
license-file:  LICENSE
author:        Emil Axelsson
maintainer:    emax@chalmers.se
copyright:     Copyright (c) 2015, Emil Axelsson
category:      Executable
build-type:    Simple
cabal-version: >=1.10

extra-source-files:
  bash/ghcci

executable ghccheck
  main-is:          GhcCheck.hs
  default-language: Haskell2010

  default-extensions:
    OverloadedStrings
    ScopedTypeVariables

  build-depends:
    base < 4.9,
    cmdargs,
    directory,
    filepath,
    process,
    text
